--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="hero__caption">
                                 <h1 data-animation="fadeInUp" data-delay=".3s">Discover the future of wellness  </h1>
                                 <p data-animation="fadeInUp" data-delay=".6s">with our innovative medicine products,<br> crafted to elevate your health and transform your life.</p>
-                                <a href="#medicine" class="btn" data-animation="fadeInLeft" data-delay=".3s">Take look on our Medicines</a>
+                                <a href="assets/img/logo/kalki Brochure.pdf" class="btn" data-animation="fadeInLeft" data-delay=".3s">Download Brochure</a>
                             </div>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4">
-                    <a href="services.html" class="btn f-right sm-left">Take a Service</a>
+                    <a href="./assets/img/logo/kalki Brochure.pdf" class="btn f-right sm-left">Download Brochure</a>
                 </div>
             </div>
         </div>
@@ -352,7 +352,7 @@
     <div class="video-area section-bg2 d-flex align-items-center"  data-background="assets/img/gallery/video-bg.png">
         <div class="video-wrap position-relative">
             <div class="video-icon" >
-                <a class="popup-video btn-icon" href="/assets/img/logo/Green Modern Forest  Wattpad Book Cover (1).mp4"><i class="fas fa-play"></i></a>
+                <a class="popup-video btn-icon" href="https://imagesforpuda.blob.core.windows.net/applications/Green Modern Forest  Wattpad Book Cover (2).mp4"><i class="fas fa-play"></i></a>
             </div>
         </div>
     </div>
@@ -424,7 +424,7 @@
                             <!-- social -->
                             <div class="footer-social mt-50">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-pinterest-p"></i></a>
                             </div>
                         </div>
