--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       btnColor: "#16BE45",
       ctaText: "WhatsApp Us",
       cornerRadius: 40,
-      marginBottom: 20,s
+      marginBottom: 20,
       marginLeft: 20,
       marginRight: 100,
       btnPosition: "right",
