--- a/index.html
+++ b/index.html
@@ -370,13 +370,10 @@
                     <div class="about-caption mb-50">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-35">
-                            <p>Address: Badhara Chauraha, Deoria
-                            Uttar Pradesh, 274001</p>
+                            <p>GN-654,start city, haveli, Kolawadi, Pune, 412110 </p>
                         </div>
                         <p> EMAIL: Biotechkalki@gmail.com
-                        Phone No : 9161666611
-                        D.L No1:          UP5220B000817
-                       D.L No2          UP5221B000815</p>
+                        Phone No : 9161666611</p>
                         
                     </div>
                 </div>
